# scrounge-tokens

./: CLAUDE.md  README.md  pyproject.toml
src/scrounge_tokens/: main.py
src/scrounge_tokens.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_main.py
