[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scrounge-tokens"
version = "0.1.0"
description = "Fetch and display AI model pricing from providers"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "black>=24",
    "ruff>=0.4",
]

[project.scripts]
scrounge-tokens = "scrounge_tokens.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
